# eda-python-pkgs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pfm/: README.md  consumer.py  producer.py  pubsub_api_pb2.py  pubsub_api_pb2_grpc.py  pubsubapi.py  serializer.py  settings.py
tests/: example_avro_model.py  test_avro_model.py  test_consumer.py  test_kafka_settings.py  test_producer.py
