[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pfm"
authors = [
    {name = "Mitch Martin", email = "mitch_martin@pfm.org"}
]
description = "Prison Fellowship EDA helpers"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "confluent_kafka",
    "avro",
    "grpcio",
    "grpcio-tools",
    "json"
]